# Yet-Another-yt-dlp-Wrapper

./: CMakeLists.txt  README.md  main.cpp
src/: Window.cpp  Window.h  filedownloader.cpp  filedownloader.h
